front-proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: slack-proxy
                  cluster: service_api
                  retry_policy:
                    retry_on: retriable-status-codes
                    retriable_status_codes: [429]
                    num_retries: 100
          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout
          http_protocol_options:
            allow_absolute_url: true
          http_filters:
          - name: envoy.router
  clusters:
  - name: service_api
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    hosts:
      - socket_address:
          address: slack-proxy
          port_value: 80
